:bento: fix translation

--- a/i18n/en/experience.json
+++ b/i18n/en/experience.json
@@ -4,7 +4,7 @@
       "company": "VNPT Technology",
       "country": "VietNam",
       "emp_type": "Full - Time",
-      "position": "Software Engineer (Remote)",
+      "position": "Software Engineer (Onsite)",
       "site_url": "www.vnpt-technology.vn",
       "start_date": "2022-08-15T00:00:00.000",
       "state": "HaNoi",
